# robinarena

./: .gitignore  AGENTS.md  NSTACK_GUIDELINES.md  README.md  SECURITY.md  nstack.config.mjs  package.json  paseo.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: security.yml
backend/: Dockerfile  package.json
backend/api/: admin.ts  arena-repository.ts  arena-time.test.mjs  arena-time.ts  arena.ts  capital-reconciliation.test.mjs  capital-reconciliation.ts  crypto.ts  data.ts  dexscreener.ts  gateway.ts  json-utils.ts  lifi.ts  live-engine.ts  openrouter.ts  portfolio.ts  robinhood-mcp.ts  robinhood-oauth.ts  robinhood-order.test.mjs  robinhood-order.ts  secrets.ts  status.ts  subaccount.test.mjs  subaccount.ts  swapAggregator.ts  swapQuantity.ts  swapReserve.ts  swaps.ts  tradefinder-access.ts  tradefinder-chat.test.mjs  tradefinder-chat.ts  tradingPolicy.ts  types.ts  user-account.ts  user-agent-cadence.ts  user-agent-continuous.test.mjs  user-agent-continuous.ts  user-agent-openrouter.ts  user-agent.ts  user-auth.ts  (+3 more)
backend/api/migrations/: 002_model_arena.up.sql  003_daily_loss_limit.up.sql  004_openrouter_gateway.up.sql  006_robinhood_oauth.up.sql  (+15 more)
deploy/nstack/: compose.dokploy.yaml  encore.infra.json
frontend/: nuxt.config.ts  package.json
frontend/app/: app.config.ts  app.vue
frontend/public/: site.webmanifest
scripts/: live-integration-devexec.mjs  ui-audit-devexec.mjs
training/: .gitignore  README.md  chat.py  config.example.json  download_model.py  pyproject.toml  trading_data.py  train.py
training/tests/: test_trading_data.py
(+23 files in other folders)
