[project]
name = "robinarena-tinker-training"
version = "0.1.0"
description = "Prepare historical market examples and LoRA fine-tune a RobinArena decision model with Tinker."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "tinker>=0.23,<0.24",
  "tinker-cookbook[inkling] @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git@v0.5.2",
  "yfinance>=0.2.66,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
